--- a/board/build.gradle
+++ b/board/build.gradle
@@ -31,6 +31,7 @@ dependencies {
 	implementation 'javax.servlet:jstl'*/
 	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
+	implementation 'org.springframework.boot:spring-boot-starter-validation'
 }
 
 tasks.named('test') {
