--- a/board/src/main/resources/application.properties
+++ b/board/src/main/resources/application.properties
@@ -2,3 +2,5 @@ spring.datasource.url=jdbc:oracle:thin:@localhost:1521/xe
 spring.datasource.driver-class-name=oracle.jdbc.driver.OracleDriver
 spring.datasource.username=C##taewoo
 spring.datasource.password=0000
+
+spring.messages.basename=messages, errors
