--- a/board/src/main/resources/application.properties
+++ b/board/src/main/resources/application.properties
@@ -4,3 +4,5 @@ spring.datasource.username=C##taewoo
 spring.datasource.password=0000
 
 spring.messages.basename=messages, errors
+
+server.servlet.session.tracking-modes=cookie
