유효성 검사 메시지가 제대로 뜨지 않는 것을 고쳤다. 원인은 ModelAttribute의 이름에 있었다. ModelAttribute가 객체로 전달될 때 기본 이름의 규칙은 전달할 객체의 클래스 이름에서 첫 글자를 소문자로 바꾸는 것이다. 하지만 나는 기본값을 사용하지 않고 따로 이름을 지정해주었다. 내가 지정한 이름으로 errors.properties 파일에서 수정해주니 잘 동작하였다.

--- a/board/src/main/resources/errors.properties
+++ b/board/src/main/resources/errors.properties
@@ -4,12 +4,12 @@ NotBlank.board.nickname=\uB2C9\uB124\uC784\uC744 \uC785\uB825\uD574\uC8FC\uC138\
 
 Length.board.title={1} ~ {2} \uC0AC\uC774\uC5D0 \uC81C\uBAA9\uC744 \uC785\uB825\uD574\uC8FC\uC138\uC694.
 
-NotBlank.memberRegisterDto.id=ID\uB294 \uD544\uC218\uC694\uC18C\uC785\uB2C8\uB2E4.!!
-NotBlank.memberRegisterDto.password=\uBE44\uBC00\uBC88\uD638 \uC785\uB825\uD574\uC8FC\uC138\uC694!!
-NotBlank.memberRegisterDto.name=\uC774\uB984\uC744 \uC785\uB825\uD574\uC8FC\uC138\uC694!!
-NotBlank.memberRegisterDto.nickname=\uB2C9\uB124\uC784\uC744 \uC785\uB825\uD574\uC8FC\uC138\uC694!!
+NotBlank.member.id=ID\uB294 \uD544\uC218\uC694\uC18C\uC785\uB2C8\uB2E4.!!
+NotBlank.member.password=\uBE44\uBC00\uBC88\uD638 \uC785\uB825\uD574\uC8FC\uC138\uC694!!
+NotBlank.member.name=\uC774\uB984\uC744 \uC785\uB825\uD574\uC8FC\uC138\uC694!!
+NotBlank.member.nickname=\uB2C9\uB124\uC784\uC744 \uC785\uB825\uD574\uC8FC\uC138\uC694!!
 
-NotBlank.memberLoginDto.id=ID\uB97C \uC785\uB825\uD574\uC8FC\uC138\uC694!!
-NotBlank.memberLoginDto.password=\uBE44\uBC00\uBC88\uD638\uB97C \uC785\uB825\uD574\uC8FC\uC138\uC694!!
+NotBlank.loginForm.id=ID\uB97C \uC785\uB825\uD574\uC8FC\uC138\uC694!!
+NotBlank.loginForm.password=\uBE44\uBC00\uBC88\uD638\uB97C \uC785\uB825\uD574\uC8FC\uC138\uC694!!
 
 NotBlank = \uD544\uC218 \uC694\uC18C\uC785\uB2C8\uB2E4!!
