--- a/board/src/main/resources/errors.properties
+++ b/board/src/main/resources/errors.properties
@@ -4,11 +4,11 @@ NotBlank.board.nickname=\uB2C9\uB124\uC784\uC744 \uC785\uB825\uD574\uC8FC\uC138\
 
 Length.board.title={1} ~ {2} \uC0AC\uC774\uC5D0 \uC81C\uBAA9\uC744 \uC785\uB825\uD574\uC8FC\uC138\uC694.
 
-NotBlank.member.id=ID\uB294 \uD544\uC218\uC694\uC18C\uC785\uB2C8\uB2E4.!!
-NotBlank.member.password=\uBE44\uBC00\uBC88\uD638 \uC785\uB825\uD574\uC8FC\uC138\uC694!!
-NotBlank.member.confirmPassword=\uD655\uC778 \uBE44\uBC00\uBC88\uD638\uB97C \uC785\uB825\uD574\uC8FC\uC138\uC694!!
-NotBlank.member.name=\uC774\uB984\uC744 \uC785\uB825\uD574\uC8FC\uC138\uC694!!
-NotBlank.member.nickname=\uB2C9\uB124\uC784\uC744 \uC785\uB825\uD574\uC8FC\uC138\uC694!!
+NotBlank.memberRegister.id=ID\uB294 \uD544\uC218\uC694\uC18C\uC785\uB2C8\uB2E4.!!
+NotBlank.memberRegister.password=\uBE44\uBC00\uBC88\uD638 \uC785\uB825\uD574\uC8FC\uC138\uC694!!
+NotBlank.memberRegister.confirmPassword=\uD655\uC778 \uBE44\uBC00\uBC88\uD638\uB97C \uC785\uB825\uD574\uC8FC\uC138\uC694!!
+NotBlank.memberRegister.name=\uC774\uB984\uC744 \uC785\uB825\uD574\uC8FC\uC138\uC694!!
+NotBlank.memberRegister.nickname=\uB2C9\uB124\uC784\uC744 \uC785\uB825\uD574\uC8FC\uC138\uC694!!
 
 NotBlank.loginForm.id=ID\uB97C \uC785\uB825\uD574\uC8FC\uC138\uC694!!
 NotBlank.loginForm.password=\uBE44\uBC00\uBC88\uD638\uB97C \uC785\uB825\uD574\uC8FC\uC138\uC694!!
