--- a/board/src/main/resources/application.properties
+++ b/board/src/main/resources/application.properties
@@ -6,3 +6,9 @@ spring.datasource.password=0000
 spring.messages.basename=messages, errors
 
 server.servlet.session.tracking-modes=cookie
+
+spring.jpa.hibernate.ddl-auto=create
+spring.jpa.properties.hibernate.format_sql=true
+
+logging.level.org.hibernate.SQL=debug
+logging.level.org.hibernate.type=trace
