--- a/board/src/main/resources/errors.properties
+++ b/board/src/main/resources/errors.properties
@@ -13,4 +13,6 @@ NotBlank.memberRegister.nickname=\uB2C9\uB124\uC784\uC744 \uC785\uB825\uD574\uC8
 NotBlank.loginForm.id=ID\uB97C \uC785\uB825\uD574\uC8FC\uC138\uC694!!
 NotBlank.loginForm.password=\uBE44\uBC00\uBC88\uD638\uB97C \uC785\uB825\uD574\uC8FC\uC138\uC694!!
 
+NotBlank.search.content="\uAC80\uC0C9\uC5B4\uB97C \uC785\uB825\uD574\uC8FC\uC138\uC694!!"
+
 NotBlank = \uD544\uC218 \uC694\uC18C\uC785\uB2C8\uB2E4!!
