--- a/board/src/main/resources/application.properties
+++ b/board/src/main/resources/application.properties
@@ -7,8 +7,7 @@ spring.messages.basename=messages, errors
 
 server.servlet.session.tracking-modes=cookie
 
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=none
 spring.jpa.properties.hibernate.format_sql=true
 
 logging.level.org.hibernate.SQL=debug
-logging.level.org.hibernate.type=trace
