멤버 회원가입, 로그인, 로그아웃 기능 및 폼 완성 - validation이 내 요구사항을 만족하지 못하지만 개발에 편의를 위해 추후 수정예정 ==> 나중에 멤버 수정기능 추가하자, spring sqeurity도 공부하자 글 등록, 게시판 화면 완성 ==> 글 수정, 삭제, 디테일 화면 만들어야 함 댓글기능 만들어야 한다.

--- a/myBoard/src/main/resources/application.properties
+++ b/myBoard/src/main/resources/application.properties
@@ -5,7 +5,12 @@ spring.datasource.password=0000
 
 spring.messages.basename=messages, errors
 
+server.servlet.session.tracking-modes=cookie
+
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.show-sql=true
 
 logging.level.org.hibernate.sql=debug
+
+
