--- a/myBoard/build.gradle
+++ b/myBoard/build.gradle
@@ -2,7 +2,7 @@ plugins {
 	id 'org.springframework.boot' version '2.7.3'
 	id 'io.spring.dependency-management' version '1.0.13.RELEASE'
 	id 'java'
-}
+} // 플러그인 설정
 
 group = 'Ver2'
 version = '0.0.1-SNAPSHOT'
@@ -14,18 +14,28 @@ configurations {
 	}
 }
 
+// 저장소 설정
 repositories {
 	mavenCentral()
 }
 
+/*
+의존관계 설정
+- api, complie, implementation:프로젝트 컴파일 과정에서 필요한 라이브러리
+- runtime : 프로젝트 실행 과정에서 필요
+- test~ : 테스트 컴파일 과정에서 필요
+- testRuntime : 테스트 실행 과정에서 필요
+* */
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
+
 	compileOnly 'org.projectlombok:lombok'
 	runtimeOnly 'com.oracle.database.jdbc:ojdbc8'
 	annotationProcessor 'org.projectlombok:lombok'
+
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
 
